# jordansimsmith-com

./: .bazelignore  .bazelrc  .gitignore  .npmrc  .prettier.config.js  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt
anki_backup_api/: BUILD.bazel  README.md
anki_backup_api/addon/: __init__.py  anki_backup.py  manifest.json  setup.py
anki_backup_api/infra/: main.tf
anki_backup_api/src/test/resources/: init_resources.py  logback-test.xml  test.properties
auction_tracker_api/: BUILD.bazel  README.md
auction_tracker_api/evals/: run_eval.py
auction_tracker_api/evals/dataset/: 6005420243.json  6009743124.json  6011120058.json  6012209428.json  6012890795.json  6013070383.json  6013169027.json  6014570814.json  6015889153.json  6016230487.json  6019029453.json  6019440661.json  6020487641.json  README.md  labels.json  s001.json  s002.json  s004.json  s005.json  s007.json  s011.json  s012.json  s013.json  s014.json  s015.json  s016.json  s019.json  s022.json
auction_tracker_api/evals/mtg_bulk/dataset/: 6005415727.json  6005425400.json  6008004664.json  6009724845.json  6011078843.json  6011401445.json  6013179958.json  6013731162.json  6014022009.json  6033736707.json  README.md  criteria.json  labels.json  s003.json  s006.json  s008.json  s009.json  s010.json  s017.json  s018.json  s020.json  s021.json  s023.json  splits.json
auction_tracker_api/evals/mtg_bulk/prompts/: v3.md
auction_tracker_api/evals/prompts/: v1.md  v2.md
auction_tracker_api/evals/ram/dataset/: 5719656155.json  5791751431.json  5808021713.json  5905364194.json  6019323734.json  6019901514.json  6019982250.json  6020507453.json  6020700530.json  6020700592.json  6020701173.json  6020797024.json  6020830194.json  6021068148.json  6021723909.json  6022085237.json  6022204522.json  6022318502.json  6022401837.json  6022836583.json  6023438300.json  6023439379.json  6023647468.json  6023676047.json  6023701974.json  6023770695.json  6023870820.json  6023896449.json  6023897063.json  6024042596.json  6024908813.json  6024908887.json  6024908906.json  6024908990.json  6024942755.json  6025521674.json  6025547161.json  6025647931.json  6025671623.json  6025690168.json  (+29 more)
auction_tracker_api/evals/ram/prompts/: v1.md  v2.md  v3.md
auction_tracker_api/infra/: main.tf
auction_tracker_api/src/test/resources/: init_resources.py  test.properties
auth_api/: BUILD.bazel  README.md
auth_api/infra/: main.tf
book_tracker_api/: BUILD.bazel  README.md
book_tracker_api/infra/: .terraform.lock.hcl  main.tf
book_tracker_api/src/test/resources/: init_resources.py  test.properties
book_tracker_web/: BUILD.bazel  (+3 more)
event_calendar_api/: BUILD.bazel  README.md
event_calendar_api/infra/: .terraform.lock.hcl  main.tf
event_calendar_api/migrations/: 000-delete-sports-team-fixtures.py
event_calendar_api/src/test/resources/: init_resources.py  logback-test.xml  test.properties
football_calendar_api/: BUILD.bazel  README.md
football_calendar_api/infra/: .terraform.lock.hcl  main.tf
immersion_tracker_api/: BUILD.bazel  README.md
immersion_tracker_api/infra/: .terraform.lock.hcl  main.tf  resolve_location.sh
immersion_tracker_api/local/: init_resources.py
immersion_tracker_api/migrations/: 000-backfill-youtube-channel-details.py  001-backfill-average-runtime.py  002-backfill-spotify-episodes.py  003-backfill-youtube-channel-artwork.py  004-backfill-spotify-show-artwork.py
immersion_tracker_api/script/: sync_episodes.py
japanese_dictionary_api/: BUILD.bazel  README.md
japanese_dictionary_api/addon/: README.md  __init__.py  api_client.py  audio.py  config.json  css_inline.py  css_scope.py  dialog.py  japanese_dictionary.py  jitendex_styles.py  kana_form.py  manifest.json  note_builder.py  pitch_graph.py  setup.py  structured_content.py  test_audio.py  test_css_inline.py  test_css_scope.py  test_kana_form.py  test_note_builder.py  test_pitch_graph.py  test_runner.py  test_smoke.py  test_structured_content.py  yomitan_styles.py
japanese_dictionary_api/infra/: main.tf
japanese_dictionary_api/migrations/: 000-rebuild-terms.py
lib/auth/: BUILD.bazel
lib/dynamodb/: BUILD.bazel
lib/http/: BUILD.bazel  defs.bzl
lib/json/: BUILD.bazel
lib/llm/: BUILD.bazel
lib/localstack/: BUILD.bazel  defs.bzl
lib/notifications/: BUILD.bazel
lib/prompts/: BUILD.bazel
lib/s3/: BUILD.bazel
lib/secrets/: BUILD.bazel
lib/testcontainers/: BUILD.bazel  defs.bzl
lib/time/: BUILD.bazel
lib/ui/: BUILD.bazel  package.json
lib/ui/src/: Layout.test.tsx  Layout.tsx  Login.test.tsx  Login.tsx  index.ts  test-setup.ts
packing_list_api/: BUILD.bazel  README.md
packing_list_api/infra/: main.tf
packing_list_web/: BUILD.bazel  README.md  index.html  package.json  tsconfig.json  vitest.config.ts
packing_list_web/infra/: .terraform.lock.hcl  main.tf
packing_list_web/src/: App.test.tsx  App.tsx  main.tsx
packing_list_web/src/api/: client.ts  fake-client.ts  http-client.ts
packing_list_web/src/auth/: session.ts
packing_list_web/src/components/: AddItemModal.tsx  CategorySection.tsx  EditItemModal.tsx  ItemRow.tsx  TemplatesPicker.tsx  TripDetailsForm.tsx  TripDetailsModal.tsx
packing_list_web/src/domain/: dates.ts  items.ts  normalize.ts
packing_list_web/src/layouts/: AppShellLayout.tsx
packing_list_web/src/pages/: CreateTripPage.test.tsx  CreateTripPage.tsx  LoginPage.test.tsx  LoginPage.tsx  TripPage.test.tsx  TripPage.tsx  TripsPage.test.tsx  TripsPage.tsx
packing_list_web/src/presenters/: create-trip-presenter.ts  trip-presenter.ts
personal_website_web/: BUILD.bazel  README.md  index.html  package.json
personal_website_web/infra/: .terraform.lock.hcl  main.tf
personal_website_web/src/: App.jsx  index.css  main.jsx
price_tracker_api/: BUILD.bazel  README.md
price_tracker_api/infra/: .terraform.lock.hcl  main.tf
subfootball_tracker_api/: BUILD.bazel  README.md
subfootball_tracker_api/infra/: .terraform.lock.hcl  main.tf
tools/format/: BUILD.bazel
tools/java/: BUILD.bazel
(+507 files in other folders)
