load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_library")

npm_link_all_packages(
    name = "node_modules",
)

js_library(
    name = "prettierrc",
    srcs = [".prettier.config.js"],
    visibility = ["//tools/format:__pkg__"],
)

alias(
    name = "format",
    actual = "//tools/format:format",
)
