load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

exports_files(["MODULE.bazel"])

npm_link_all_packages(
    name = "node_modules",
)

js_library(
    name = "prettierrc",
    srcs = [".prettier.config.js"],
    visibility = ["//tools/format:__pkg__"],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements.txt",
)

alias(
    name = "format",
    actual = "//tools/format:format",
)

alias(
    name = "apply",
    actual = "//tools/terraform:apply",
)
