module(
    name = "com_jordansimsmith",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_java", version = "9.5.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")

register_toolchains("//tools/java:custom_java_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "ch.qos.logback:logback-classic:1.5.32",
        "ch.qos.logback:logback-core:1.5.32",
        "com.amazonaws:aws-lambda-java-core:1.4.0",
        "com.amazonaws:aws-lambda-java-events:3.16.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.21",
        "com.fasterxml.jackson.core:jackson-core:2.21.0",
        "com.fasterxml.jackson.core:jackson-databind:2.21.0",
        "com.google.dagger:dagger:2.59.1",
        "com.google.dagger:dagger-compiler:2.59.1",
        "com.google.googlejavaformat:google-java-format:1.34.1",
        "com.google.guava:guava:33.5.0-jre",
        "net.sf.biweekly:biweekly:0.6.8",
        "org.assertj:assertj-core:3.27.7",
        "org.jsoup:jsoup:1.22.1",
        "org.junit.jupiter:junit-jupiter-api:6.0.3",
        "org.junit.jupiter:junit-jupiter-engine:6.0.3",
        "org.junit.jupiter:junit-jupiter-params:6.0.3",
        "org.junit.platform:junit-platform-commons:6.0.3",
        "org.junit.platform:junit-platform-engine:6.0.3",
        "org.junit.platform:junit-platform-launcher:6.0.3",
        "org.junit.platform:junit-platform-reporting:6.0.3",
        "org.mockito:mockito-core:5.21.0",
        "org.slf4j:slf4j-api:2.0.17",
        "org.testcontainers:junit-jupiter:1.21.4",
        "org.testcontainers:testcontainers:2.0.3",
        "software.amazon.awssdk:dynamodb:2.41.32",
        "software.amazon.awssdk:dynamodb-enhanced:2.41.32",
        "software.amazon.awssdk:iam-policy-builder:2.41.32",
        "software.amazon.awssdk:lambda:2.41.32",
        "software.amazon.awssdk:secretsmanager:2.41.32",
        "software.amazon.awssdk:sns:2.41.32",
        "software.amazon.awssdk:sqs:2.41.32",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(maven, "maven")

bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "dynamodb",
    digest = "sha256:d89f8fcc6b1a39cb35976c248ed42a28c66ae00dc043099210f5571e42648ab4",
    image = "docker.io/amazon/dynamodb-local",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "3.3.0",
)
oci.pull(
    name = "alpine",
    digest = "sha256:8fc3dacfb6d69da8d44e42390de777e48577085db99aa4e4af35f483eb08b989",
    image = "docker.io/library/alpine",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "3.17",
)
oci.pull(
    name = "ryuk",
    digest = "sha256:31b31269d06603366cbfd0284708dcd2e281e8a4188e53fce3d3304439d0df3d",
    image = "docker.io/testcontainers/ryuk",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "0.13.0",
)
oci.pull(
    name = "localstack",
    digest = "sha256:46302bcb91a7e8008e6394be8afafdbfa40fb77a54d4046a38be35992042d5de",
    image = "docker.io/localstack/localstack",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "4.13.1",
)
use_repo(oci, "alpine", "alpine_linux_amd64", "alpine_linux_arm64_v8", "dynamodb", "dynamodb_linux_amd64", "dynamodb_linux_arm64", "localstack", "localstack_linux_amd64", "localstack_linux_arm64", "ryuk", "ryuk_linux_amd64", "ryuk_linux_arm64")

bazel_dep(name = "aspect_rules_lint", version = "2.1.0")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.1.2",
    dev_dependency = True,
)

bazel_dep(name = "rules_python", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

bazel_dep(name = "aspect_rules_js", version = "3.0.0-rc4")
bazel_dep(name = "aspect_rules_ts", version = "3.8.4")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

pnpm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "pnpm",
    dev_dependency = True,
)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//immersion_tracker_web:package.json",
        "//packing_list_web:package.json",
        "//personal_website_web:package.json",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
