load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("//lib/localstack:defs.bzl", "localstack_image")

HANDLERS = glob(["src/main/java/**/*Handler.java"])

INTEGRATION_TESTS = glob(
    ["src/test/java/**/*IntegrationTest.java"],
    allow_empty = True,
)

E2E_TESTS = glob(
    ["src/test/java/**/*E2ETest.java"],
    allow_empty = True,
)

UNIT_TESTS = glob(
    ["src/test/java/**/*Test.java"],
    allow_empty = True,
    exclude = INTEGRATION_TESTS + E2E_TESTS,
)

java_library(
    name = "lib",
    srcs = glob(
        ["src/main/java/**/*.java"],
        exclude = HANDLERS,
    ),
    deps = [
        "//lib/auth:lib",
        "//lib/dynamodb:lib",
        "//lib/http:lib",
        "//lib/json:lib",
        "//lib/s3:lib",
        "//lib/secrets:lib",
        "//lib/time:lib",
        "//third_party/dagger",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_s3",
    ],
)

java_binary(
    name = "auth-handler",
    srcs = ["src/main/java/com/jordansimsmith/ankibackup/AuthHandler.java"],
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/auth:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "create-backup-handler",
    srcs = ["src/main/java/com/jordansimsmith/ankibackup/CreateBackupHandler.java"],
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_s3",
    ],
)

java_binary(
    name = "update-backup-handler",
    srcs = ["src/main/java/com/jordansimsmith/ankibackup/UpdateBackupHandler.java"],
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_s3",
    ],
)

java_binary(
    name = "find-backups-handler",
    srcs = ["src/main/java/com/jordansimsmith/ankibackup/FindBackupsHandler.java"],
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "get-backup-handler",
    srcs = ["src/main/java/com/jordansimsmith/ankibackup/GetBackupHandler.java"],
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/http:lib",
        "//lib/time:lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_s3",
    ],
)

pkg_files(
    name = "anki-addon-source-files",
    srcs = [
        "addon/__init__.py",
        "addon/anki_backup.py",
        "addon/manifest.json",
        "addon/setup.py",
    ],
    strip_prefix = strip_prefix.from_pkg("addon"),
)

pkg_zip(
    name = "anki-addon-package",
    srcs = [":anki-addon-source-files"],
    out = "anki-backup.ankiaddon",
    package_dir = "",
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(
        ["src/test/java/**/*.java"],
        exclude = INTEGRATION_TESTS + E2E_TESTS + UNIT_TESTS,
    ),
    data = [
        ":local-load",
    ],
    resources = [
        "src/test/resources/logback-test.xml",
        "src/test/resources/test.properties",
    ],
    deps = [
        ":lib",
        "//lib/auth:lib",
        "//lib/dynamodb:test-lib",
        "//lib/http:lib",
        "//lib/http:test-lib",
        "//lib/json:lib",
        "//lib/localstack:lib",
        "//lib/s3:test-lib",
        "//lib/secrets:test-lib",
        "//lib/testcontainers:test-lib",
        "//lib/time:test-lib",
        "//third_party/dagger",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_s3",
    ],
)

java_test_suite(
    name = "unit-tests",
    size = "small",
    srcs = UNIT_TESTS,
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["Test.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

java_test_suite(
    name = "integration-tests",
    size = "medium",
    srcs = INTEGRATION_TESTS,
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
    },
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["IntegrationTest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":auth-handler",
        ":create-backup-handler",
        ":find-backups-handler",
        ":get-backup-handler",
        ":lib",
        ":test-lib",
        ":update-backup-handler",
        "//lib/dynamodb:test-lib",
        "//lib/http:lib",
        "//lib/json:lib",
        "//lib/s3:test-lib",
        "//lib/secrets:test-lib",
        "//lib/testcontainers:test-lib",
        "//lib/time:test-lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_testcontainers_junit_jupiter",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_iam_policy_builder",
        "@maven//:software_amazon_awssdk_s3",
        "@maven//:software_amazon_awssdk_sdk_core",
    ],
)

localstack_image(
    name = "local",
    handler_jars = [
        ":create-backup-handler_deploy.jar",
        ":find-backups-handler_deploy.jar",
        ":get-backup-handler_deploy.jar",
        ":update-backup-handler_deploy.jar",
    ],
    init_resources = "src/test/resources/init_resources.py",
    repo_tag = "bazel/anki-backup-local:latest",
)

java_test_suite(
    name = "e2e-tests",
    size = "large",
    srcs = E2E_TESTS,
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
        "ANKI_BACKUP_USER": "alice",
        "ANKI_BACKUP_PASSWORD": "password",
    },
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["E2ETest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":create-backup-handler",
        ":find-backups-handler",
        ":get-backup-handler",
        ":lib",
        ":test-lib",
        ":update-backup-handler",
        "//lib/dynamodb:test-lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_testcontainers_junit_jupiter",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_s3",
        "@maven//:software_amazon_awssdk_sdk_core",
    ],
)
